--- a/.github/workflows/build-testapplication.yml
+++ b/.github/workflows/build-testapplication.yml
@@ -6,3 +6,18 @@ on:
         description: 'OpenSilver package version'
         default: 'latest'
         required: true
+        
+jobs:
+  TestApplication-Build:
+    runs-on: windows-latest
+    steps:
+      - uses: microsoft/setup-msbuild@v1.0.3
+      - name: Inject slug/short variables
+        uses: rlespinasse/github-slug-action@v3.x
+      - uses: actions/setup-dotnet@v1
+        with:
+          dotnet-version: '6.0.101'
+      - name: Clone repo
+        uses: actions/checkout@v2
+        with:
+          ref: ${{ github.ref }}
