--- a/.github/workflows/build-testapplication.yml
+++ b/.github/workflows/build-testapplication.yml
@@ -1,5 +1,8 @@
 name: TestApplication Build
 on:
+  push:
+    branches:
+      - testapplication_cicd
   workflow_dispatch:
     inputs:
       opensilver-version:
