--- a/.github/workflows/build-testapplication.yml
+++ b/.github/workflows/build-testapplication.yml
@@ -1,8 +1,9 @@
 name: TestApplication Build
 on:
-  push:
-    branches:
-      - testapplication_cicd
+  workflow_run:
+    workflows: ['OpenSilver Build']
+    types:
+      - completed
   workflow_dispatch:
     inputs:
       opensilver-version:
@@ -25,6 +26,20 @@ jobs:
         uses: actions/checkout@v2
         with:
           ref: ${{ github.ref }}
+      - name: Restore Packages
+        run: |
+          ./restore-packages-opensilver.bat
+          nuget restore src/OpenSilver.sln -v quiet
+      - name: Build Compiler
+        run: msbuild src/Compiler/Compiler/Compiler.OpenSilver.csproj -p:Configuration=SL -clp:ErrorsOnly -restore
+      - name: Copy Compiler Assemblies
+        run: cp src/Compiler/Compiler/bin/OpenSilver/SL/net461/OpenSilver.Compiler*dll src/packages/OpenSilver.1.0.0/tools/;
+      - name: Build OpenSilver
+        working-directory: build
+        run: msbuild slnf/OpenSilver.slnf -p:Configuration=SL -clp:ErrorsOnly -restore
+      - name: Format Package Version
+        id: version
+        run: echo "::set-output name=suffix::$(date +'%Y-%m-%d-%H%M%S')-${{ env.GITHUB_SHA_SHORT }}"
   TestApplication-Build:
     runs-on: windows-latest
     if: always()
