--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -4,7 +4,7 @@ env:
 on:
   push:
     branches:
-      - develop
+      - testapplication_cicd
 jobs:
   OpenSilver-Build:
     #We should not run these steps on the forks by default.
@@ -59,10 +59,4 @@ jobs:
       - uses: actions/upload-artifact@v2
         with:
           name: OpenSilver
-          path: "build/output/OpenSilver"
-      - name: Upload packages
-        run: |
-           dotnet nuget push "build\output\OpenSilver\*.nupkg" -k ${{ secrets.GITHUB_TOKEN }} -s https://nuget.pkg.github.com/${{ env.GITHUB_REPOSITORY_OWNER_PART }}/index.json
-      - name: Upload packages to MyGet
-        run: |
-           dotnet nuget push "build\output\OpenSilver\*.nupkg" -k ${{ secrets.MYGET_TOKEN }} -s https://www.myget.org/F/opensilver/api/v2/package     
+          path: "build/output/OpenSilver"   
