--- a/.github/workflows/build-testapplication.yml
+++ b/.github/workflows/build-testapplication.yml
@@ -1,7 +1,8 @@
 name: TestApplication Build
 on:
   workflow_run:
-    workflows: ['OpenSilver Build']
+    workflows:
+      - OpenSilverBuild
     types:
       - completed
   workflow_dispatch:
