--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -4,7 +4,7 @@ env:
 on:
   push:
     branches:
-      - develop
+      - develop11
 jobs:
   OpenSilver-Build:
     #We should not run these steps on the forks by default.
