--- a/.github/workflows/build-testapplication.yml
+++ b/.github/workflows/build-testapplication.yml
@@ -30,8 +30,7 @@ jobs:
       - name: Replace text
         working-directory: src\Tests\TestApplication
         run: |
-          sed -i 's\<base href="/" />\<base href="/testapplication/develop/opensilver/" />\g' TestApplication.OpenSilver.Browser/wwwroot/index.html
-          tail -n 100 TestApplication.OpenSilver.Browser/wwwroot/index.html
+          sed -e 's\<base href="/" />\<base href="/testapplication/develop/opensilver/" />\g' TestApplication.OpenSilver.Browser/wwwroot/index.html
       - name: Use OpenSilver version
         working-directory: src\Tests\TestApplication
         run: |
