--- a/.github/workflows/build-testapplication.yml
+++ b/.github/workflows/build-testapplication.yml
@@ -46,19 +46,16 @@ jobs:
         run: |
           mkdir temp; echo "OpenSilver ${{ steps.format-version.outputs.version }}" > temp/Version.txt
           nuget.exe pack nuspec\OpenSilver.nuspec -OutputDirectory "output/OpenSilver" -Properties "PackageId=OpenSilver;PackageVersion=${{ steps.format-version.outputs.version }};Configuration=SL;Target=OpenSilver;RepositoryUrl=https://github.com/${{ env.GITHUB_REPOSITORY_OWNER_PART }}/${{ env.GITHUB_REPOSITORY_NAME_PART }}"
-      #- name: Replace text develop
-      #  if: github.ref == 'refs/heads/develop'
-      #  working-directory: src\Tests\TestApplication
-      #  run: |
-      #    sed -i 's\<base href=\"/\" />\<base href=\"${{ env.virtual-directory }}\" />\g' TestApplication.OpenSilver.Browser/wwwroot/index.html
-      - name: Replace text release
+      - name: Replace text develop
+        if: github.ref == 'refs/heads/develop'
         working-directory: src\Tests\TestApplication
         run: |
-          $version = "${{ env.virtual-directory }}"
-          if ${{ github.ref == 'refs/heads/throw_fix' }} {
-            $version = ${{ env.virtual-directory-release }}
-          }
-          sed -i 's\<base href=\"/\" />\<base href=\"${{ version }}\" />\g' TestApplication.OpenSilver.Browser/wwwroot/index.html
+          sed -i 's\<base href=\"/\" />\<base href=\"${{ env.virtual-directory }}\" />\g' TestApplication.OpenSilver.Browser/wwwroot/index.html
+      - name: Replace text release
+        if: github.ref == 'refs/heads/throw_fix'
+        working-directory: src\Tests\TestApplication
+        run: |
+          sed -i 's\<base href=\"/\" />\<base href=\"${{ env.virtual-directory-release }}\" />\g' TestApplication.OpenSilver.Browser/wwwroot/index.html
       - name: Use OpenSilver version
         working-directory: src\Tests\TestApplication
         run: |
