--- a/.github/workflows/build-testapplication.yml
+++ b/.github/workflows/build-testapplication.yml
@@ -15,6 +15,16 @@ jobs:
   TestApplicationBuild:
     runs-on: windows-latest
     steps:
+      - name: Set directory environment variables
+        if: "${{ github.ref == 'refs/heads/develop' }}"
+        run: |
+          echo "vdir=${{ env.virtual-directory }}" >> $env:GITHUB_ENV
+          echo "apath=${{ env.app-path }}" >> $env:GITHUB_ENV
+      - name: Set directory environment variables
+        if: "${{ github.ref == 'refs/heads/throw_fix' }}"
+        run: |
+          echo "vdir=${{ env.virtual-directory-release }}" >> $env:GITHUB_ENV
+          echo "apath=${{ env.app-path-release }}" >> $env:GITHUB_ENV
       - uses: microsoft/setup-msbuild@v1.1
       - name: Inject slug/short variables
         uses: rlespinasse/github-slug-action@v3.x
