--- a/.github/workflows/build-testapplication-silverlight.yml
+++ b/.github/workflows/build-testapplication-silverlight.yml
@@ -1,4 +1,4 @@
-name: TestApplication Build
+name: TestApplication Silverlight Build
 
 env:
   virtual-directory: '/testapplication/develop/silverlight/'
