--- a/src/Tests/TestApplication/TestApplication/TestApplication.Silverlight.csproj
+++ b/src/Tests/TestApplication/TestApplication/TestApplication.Silverlight.csproj
@@ -684,7 +684,7 @@
     <None Include="Properties_Silverlight\AppManifest.xml" />
   </ItemGroup>
   <ItemGroup />
-  <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Silverlight\$(SilverlightVersion)\Microsoft.Silverlight.CSharp.targets" />
+  <Import Project="..\dll\Microsoft.Silverlight.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
 	Other similar extension points exist, see Microsoft.Common.targets.
 	<Target Name="BeforeBuild">
