--- a/src/Tests/TestApplication/TestApplication/TestApplication.Silverlight.csproj
+++ b/src/Tests/TestApplication/TestApplication/TestApplication.Silverlight.csproj
@@ -12,6 +12,7 @@
     <RootNamespace>TestApplication</RootNamespace>
     <AssemblyName>TestApplication.Silverlight</AssemblyName>
     <TargetFrameworkIdentifier>Silverlight</TargetFrameworkIdentifier>
+	<TargetFrameworkDirectory>..\dll\</TargetFrameworkDirectory>
     <TargetFrameworkVersion>v5.0</TargetFrameworkVersion>
     <SilverlightVersion>$(TargetFrameworkVersion)</SilverlightVersion>
     <SilverlightApplication>true</SilverlightApplication>
